--- a/responsive-design.html
+++ b/responsive-design.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional web development services offering modern, responsive, and interactive website solutions for hire.">    
+    <meta name="description" content="Professional web development services offering modern, responsive, and interactive website solutions for hire this is the responsive-design page it explains how my websites can fit in your mobile phone or any other device.">    
     <title>Responsive Design - Websites For Hire</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
