--- a/second-page.html
+++ b/second-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional web development services offering modern, responsive, and interactive website solutions for hire.">    
+    <meta name="description" content="Professional web development services offering modern, responsive, and interactive website solutions for hire this is the introduction page.">    
     <title>Introduction - Websites For Hire</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
