--- a/form-page.html
+++ b/form-page.html
@@ -33,7 +33,7 @@
   <p><strong>Location:</strong> Available for remote work worldwide</p>
   <p><strong>Hours:</strong> Mon - Fri, 9:00 AM - 5:00 PM</p>
 </section>        
-        <form action="https://formspree.io/f/richardlowrimore22@gmail.com" method="POST">
+        <form action="https://formspree.io/f/mrebydbw" method="POST">
     <div class="form-group">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required>
