Revise second-page.html structure and content and image
Updated the structure and content of the introduction page, including a new hero section and details about technology used.

--- a/second-page.html
+++ b/second-page.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional web development services offering modern, responsive, and interactive website solutions for hire this is the introduction page.">    
     <title>Introduction - Websites For Hire</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
@@ -26,43 +25,29 @@
         </div>
     </header>
 
-    <main class="container content-page">
-        <h2>All the Tools and Technology That Will be Used on Your Website.</h2>
-        <p>We will explain everything that we will use to create your website, using HTML, CSS, and JavaScript.</p>
+    <main class="container">
+        <section id="hero">
+            <h2>Our Technical Foundation</h2>
+            <p>We use the most modern and advanced web technologies to build your digital presence.</p>
+        </section>
 
-        <article>
-            <section>
-                <h3>Section One: The Foundation</h3>
-                <p>Hello here at Websites For Hire you will be able to ask us to develop and design any website you need.</p>
-                <ul>
-                    <li>Point 1: HTML structure!</li>
-                    <li>Point 2: CSS styling!</li>
-                    <li>Point 3: JavaScript interactivity!</li>
-                </ul>
-            </section>
-            
-            <section>
-                <h3>Section Two: Advanced Concepts</h3>
-                <p>We use the most advanced and modern web design and development to create your website.</p>
-            </section>
-        </article>
+        <section class="intro-highlight">
+            <div class="intro-image-container">
+                <img src="IMG/placeholder.text/code.jpeg" alt="Development and coding snapshot" class="intro-img">
+                <p class="image-caption">Built with precision and clean code architecture.</p>
+            </div>
+        </section>
+
+        <section id="details">
+            <h3>Why Our Technology Matters</h3>
+            <p>Our stack is built on the three foundational pillars of the web: HTML5 for structure, CSS3 for beautiful styling, and JavaScript for seamless interactivity.</p>
+        </section>
     </main>
 
     <footer>
         <div class="container">
             <div class="footer-content">
                 <p class="copyright">&copy; 2026 Websites For Hire. All rights reserved.</p>
-                <nav class="footer-nav">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="second-page.html">Introduction</a></li>
-                        <li><a href="form-page.html">Form</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="responsive-design.html">Responsive</a></li>
-                        <li><a href="modern-css.html">Modern CSS</a></li>
-                        <li><a href="interactive-js.html">Interactive JS</a></li>
-                    </ul>
-                </nav>
             </div>
         </div>
     </footer>
