Update image file extensions from .jpeg to .jpg

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="home-grid">
                 
                 <div class="project-card">
-                    <img src="IMG/office.jpeg" alt="Modern office workspace showing professional web services">
+                    <img src="IMG/office.jpg" alt="Modern office workspace showing professional web services">
                     <div class="card-text">
                         <h4>Professional Solutions</h4>
                         <p>Custom designs built for high performance and scalability.</p>
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="IMG/tech.jpeg" alt="Close up of technology and coding">
+                    <img src="IMG/tech.jpg" alt="Close up of technology and coding">
                     <div class="card-text">
                         <h4>Cutting-Edge Tech</h4>
                         <p>Utilizing the latest HTML5, CSS3, and JavaScript features.</p>
