Update service description for web services
Replaced 'Custom Landing Pages' with 'Custom Multi-Page Websites' and updated the description accordingly.

--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
     <div class="services-grid">
         
         <div class="service-card">
-            <div class="service-icon">🚀</div>
-            <h4>Custom Landing Pages</h4>
-            <p>High-converting, single-page sites designed to launch your brand or product effectively.</p>
-        </div>
-
+    <div class="service-icon">🌐</div>
+    <h4>Custom Multi-Page Websites</h4>
+    <p>From high-converting landing pages to full-scale, multi-page business sites designed for growth and professional branding.</p>
+</div>
         <div class="service-card">
             <div class="service-icon">📱</div>
             <h4>Responsive Redesigns</h4>
