Add freelance status section to second-page.html
Added a section for freelance status and project opportunities.

--- a/second-page.html
+++ b/second-page.html
@@ -43,7 +43,17 @@
             <p>Our stack is built on the three foundational pillars of the web: HTML5 for structure, CSS3 for beautiful styling, and JavaScript for seamless interactivity.</p>
         </section>
     </main>
-
+     <section id="freelance-status" style="margin-top: 50px; padding: 30px; border-top: 2px solid var(--primary-color); background: var(--card-bg); border-radius: 10px;">
+    <h3 style="color: var(--primary-color);">Now Accepting New Clients</h3>
+    <p>
+        I am currently open for freelance opportunities and project collaborations for 2026. 
+        Whether you are looking for a high-impact **single-page landing site** to launch a product, 
+        or a comprehensive **multi-page business website** built for long-term growth, I provide 
+        modern, responsive solutions tailored to your specific needs.
+    </p>
+    <p><em>Let's build something great together.</em></p>
+    <a href="form-page.html" class="cta-button">Start Your Project</a>
+</section>    
     <footer>
         <div class="container">
             <div class="footer-content">
