--- a/form-page.html
+++ b/form-page.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Professional web development services offering modern, responsive, and interactive website solutions for hire this the form page you can contact me here.">    
     <title>Contact Form - Websites For Hire</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" type="image/svg+xml" href="IMG/logo.svg">
 </head>
 <body>
     <header>
