--- a/second-page.html
+++ b/second-page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction - Websites For Hire</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" type="image/svg+xml" href="IMG/logo.svg">
 </head>
 <body>
     <header>
