--- a/success.html
+++ b/success.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You - Websites For Hire</title>
+    <link rel="icon" type="image/svg+xml" href="IMG/logo.svg">    
     <link rel="stylesheet" href="CSS/styles.css"> <style>
         .success-container {
             text-align: center;
