--- a/about.html
+++ b/about.html
@@ -9,23 +9,28 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Websites For Hire</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="second-page.html">Introduction</a></li>
-                    <li><a href="form-page.html">Form</a></li>
-                    <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="responsive-design.html">Responsive</a></li>
-                    <li><a href="modern-css.html">Modern CSS</a></li>
-                    <li><a href="interactive-js.html">Interactive JS</a></li>
-                </ul>
-            </nav>
-            <button id="theme-toggle" aria-label="Toggle Dark Mode">🌙</button>
+    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+        
+        <div class="logo-group" style="display: flex; align-items: center; gap: 10px;">
+            <img src="IMG/logo.svg" alt="Spider Logo" style="width: 40px; height: 40px;">
+            <h1 style="margin: 0;">Websites For Hire</h1>
         </div>
-    </header>
 
+        <nav>
+            <ul style="display: flex; list-style: none; gap: 15px; margin: 0; padding: 0;">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="second-page.html">Introduction</a></li>
+                <li><a href="form-page.html">Form</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="responsive-design.html">Responsive</a></li>
+                <li><a href="modern-css.html">Modern CSS</a></li>
+                <li><a href="interactive-js.html">Interactive JS</a></li>
+            </ul>
+        </nav>
+        
+        <button id="theme-toggle" aria-label="Toggle Dark Mode">🌙</button>
+    </div>
+</header>
     <main class="container content-page">
         <h2>Our Mission</h2>
         <p>This project is designed to be a robust, modern, and easy-to-customize starting point for developers who need a multi-page website. We are here to create your website using HTML, CSS, and JavaScript.</p>
