--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@
 
         <nav>
             <ul style="display: flex; list-style: none; gap: 15px; margin: 0; padding: 0;">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="second-page.html">Introduction</a></li>
-                <li><a href="form-page.html">Form</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="responsive-design.html">Responsive</a></li>
-                <li><a href="modern-css.html">Modern CSS</a></li>
-                <li><a href="interactive-js.html">Interactive JS</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="second-page.html" class="active">Introduction</a></li>
+                <li><a href="form-page.html" class="active">Form</a></li>
+                <li><a href="about.html" class="active">About</a></li>
+                <li><a href="responsive-design.html" class="active">Responsive</a></li>
+                <li><a href="modern-css.html" class="active">Modern CSS</a></li>
+                <li><a href="interactive-js.html" class="active">Interactive JS</a></li>
             </ul>
         </nav>
         
