--- a/about.html
+++ b/about.html
@@ -10,27 +10,24 @@
 <body>
     <header>
     <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
-        
         <div class="logo-group" style="display: flex; align-items: center; gap: 10px;">
             <img src="IMG/logo.svg" alt="Spider Logo" style="width: 40px; height: 40px;">
             <h1 style="margin: 0;">Websites For Hire</h1>
         </div>
-
         <nav>
             <ul style="display: flex; list-style: none; gap: 15px; margin: 0; padding: 0;">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="second-page.html" class="active">Introduction</a></li>
-                <li><a href="form-page.html" class="active">Form</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="second-page.html">Introduction</a></li>
+                <li><a href="form-page.html">Form</a></li>
                 <li><a href="about.html" class="active">About</a></li>
-                <li><a href="responsive-design.html" class="active">Responsive</a></li>
-                <li><a href="modern-css.html" class="active">Modern CSS</a></li>
-                <li><a href="interactive-js.html" class="active">Interactive JS</a></li>
+                <li><a href="responsive-design.html">Responsive</a></li>
+                <li><a href="modern-css.html">Modern CSS</a></li>
+                <li><a href="interactive-js.html">Interactive JS</a></li>
             </ul>
         </nav>
-        
         <button id="theme-toggle" aria-label="Toggle Dark Mode">🌙</button>
     </div>
-</header>
+</header>    
     <main class="container content-page">
         <h2>Our Mission</h2>
         <p>This project is designed to be a robust, modern, and easy-to-customize starting point for developers who need a multi-page website. We are here to create your website using HTML, CSS, and JavaScript.</p>
