--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
     <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
         
         <div class="logo-group" style="display: flex; align-items: center; gap: 10px;">
-            <img src="IMG/logo.svg" alt="Spider Logo" style="width: 30px; height: 30px;">                          <h1 style="margin: 0;">Websites For Hire</h1>
+            <img src="IMG/logo.svg" alt="Websites For Hire Spider Logo style="width: 30px; height: 30px;">                          
+            <h1 style="margin: 0;">Websites For Hire</h1>
         </div>
 
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="second-page.html" class="active">Introduction</a></li>
-                <li><a href="form-page.html" class="active">Form</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="responsive-design.html" class="active">Responsive</a></li>
-                <li><a href="modern-css.html" class="active">Modern CSS</a></li>
-                <li><a href="interactive-js.html" class="active">Interactive JS</a></li>                             </ul>
+                <li><a href="second-page.html">Introduction</a></li>
+                <li><a href="form-page.html">Form</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="responsive-design.html">Responsive</a></li>
+                <li><a href="modern-css.html">Modern CSS</a></li>
+                <li><a href="interactive-js.html">Interactive JS</a></li>                             </ul>
         </nav>
         <button id="theme-toggle" aria-label="Toggle Dark Mode">🌙</button>
     </div>
@@ -41,7 +42,7 @@
             <div class="home-grid">
                 
                 <div class="project-card">
-                    <img src="IMG/office.jpg" alt="Modern office workspace showing professional web  services">
+                    <img src="IMG/office.jpg" alt="Mockup of a clean, professional workspace showing a desktop computer with a responsive website layout>
                     <div class="card-text">
                         <h4>Professional Solutions</h4>
                         <p>Custom designs built for high performance and scalability.</p>
@@ -49,7 +50,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="IMG/tech.jpg" alt="Close up of technology and coding">
+                    <img src="IMG/tech.jpg" alt="Close-up of computer code on a screen representing modern web development standards>
                     <div class="card-text">
                         <h4>Cutting-Edge Tech</h4>
                         <p>Utilizing the latest HTML5, CSS3, and JavaScript features.</p>
