--- a/second-page.html
+++ b/second-page.html
@@ -3,67 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction - Websites For Hire</title>
+    <title>Introduction | Websites For Hire</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" type="image/svg+xml" href="IMG/logo.svg">
 </head>
 <body>
-    <header>
-    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
-        <div class="logo-group" style="display: flex; align-items: center; gap: 10px;">
-            <img src="IMG/logo.svg" alt="Websites For Hire Spider" Logo style="width: 40px; height: 40px;">
-            <h1 style="margin: 0;">Websites For Hire</h1>
-        </div>
-        <nav>
-            <ul style="display: flex; list-style: none; gap: 15px; margin: 0; padding: 0;">
+    <div class="header-main-container">
+        <nav class="nav-container">
+            <h1 class="brand-name">Websites For Hire</h1>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="second-page.html" class="active">Introduction</a></li>
-                <li><a href="form-page.html">Form</a></li>
+                <li><a href="second-page.html">Introduction</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="responsive-design.html">Responsive</a></li>
+                <li><a href="form-page.html">Form</a></li>
+                <li><a href="responsive-design.html">Responsive Design</a></li>
                 <li><a href="modern-css.html">Modern CSS</a></li>
                 <li><a href="interactive-js.html">Interactive JS</a></li>
             </ul>
+            <button id="theme-toggle">🌙</button>
         </nav>
-        <button id="theme-toggle" aria-label="Toggle Dark Mode">🌙</button>
     </div>
-    </header>
+
     <main class="container">
-        <section id="hero">
-            <h2>Our Technical Foundation</h2>
-            <p>We use the most modern and advanced web technologies to build your digital presence.</p>
-        </section>
-
-        <section class="intro-highlight">
-            <div class="intro-image-container">
-                <img src="IMG/code.jpg" alt="A professional workspace with a laptop and notebook, representing a modern freelance web development environment." class="intro-img">
-                <p class="image-caption">Built with precision and clean code architecture.</p>
-            </div>
-        </section>
-
-        <section id="details">
-            <h3>Why Our Technology Matters</h3>
-            <p>Our stack is built on the three foundational pillars of the web: HTML5 for structure, CSS3 for beautiful styling, and JavaScript for seamless interactivity.</p>
+        <section class="hero-card reveal">
+            <h2>Project Overview</h2>
+            <p>This project is a masterclass in modern web standards. From semantic HTML to complex JavaScript observers, every line of code is optimized for the user.</p>
         </section>
     </main>
-     <section id="freelance-status" style="margin-top: 50px; padding: 30px; border-top: 2px solid var(--primary-color); background: var(--card-bg); border-radius: 10px;">
-    <h3 style="color: var(--primary-color);">Now Accepting New Clients</h3>
-    <p>
-        I am currently open for freelance opportunities and project collaborations for 2026. 
-        Whether you are looking for a high-impact **single-page landing site** to launch a product, 
-        or a comprehensive **multi-page business website** built for long-term growth, I provide 
-        modern, responsive solutions tailored to your specific needs.
-    </p>
-    <p><em>Let's build something great together.</em></p>
-    <a href="form-page.html" class="cta-button">Start Your Project</a>
-</section>    
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <p class="copyright">&copy; 2026 Websites For Hire. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
 
     <script src="JS/script.js"></script>
 </body>
