--- a/about.html
+++ b/about.html
@@ -3,72 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional web development services offering modern, responsive, and interactive website solutions for hire this is the about page.">    <title>About Us - Websites For Hire</title>
+    <title>About | Websites For Hire</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" type="image/svg+xml" href="IMG/logo.svg">
 </head>
 <body>
-    <header>
-    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
-        <div class="logo-group" style="display: flex; align-items: center; gap: 10px;">
-            <img src="IMG/logo.svg" alt="Websites For Hire Spider" Logo style="width: 40px; height: 40px;">
-            <h1 style="margin: 0;">Websites For Hire</h1>
-        </div>
-        <nav>
-            <ul style="display: flex; list-style: none; gap: 15px; margin: 0; padding: 0;">
+    <div class="header-main-container">
+        <nav class="nav-container">
+            <h1 class="brand-name">Websites For Hire</h1>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="second-page.html">Introduction</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="form-page.html">Form</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="responsive-design.html">Responsive</a></li>
+                <li><a href="responsive-design.html">Responsive Design</a></li>
                 <li><a href="modern-css.html">Modern CSS</a></li>
                 <li><a href="interactive-js.html">Interactive JS</a></li>
             </ul>
+            <button id="theme-toggle">🌙</button>
         </nav>
-        <button id="theme-toggle" aria-label="Toggle Dark Mode">🌙</button>
     </div>
-</header>    
-    <main class="container content-page">
-        <h2>Our Mission</h2>
-        <p>This project is designed to be a robust, modern, and easy-to-customize starting point for developers who need a multi-page website. We are here to create your website using HTML, CSS, and JavaScript.</p>
 
-        <section class="core-principles">
-            <h3>Core Principles</h3>
-            <div class="feature-grid">
-                <div class="feature-item">
-                    <h4>Simplicity</h4>
-                    <p>We keep the code clean and well-commented for easy understanding and modification.</p>
-                </div>
-                <div class="feature-item">
-                    <h4>Performance</h4>
-                    <p>Ensure the site loads quickly and runs smoothly on all devices.</p>
-                </div>
-                <div class="feature-item">
-                    <h4>Scalability</h4>
-                    <p>We structure the CSS and JS to allow for easy expansion to more pages and features.</p>
-                </div>
-            </div>
+    <main class="container">
+        <section class="hero-card reveal">
+            <h2>Our Mission</h2>
+            <p>Websites For Hire was founded to provide professional, accessible, and high-speed web solutions for businesses of all sizes.</p>
         </section>
     </main>
-
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <p class="copyright">&copy; 2026 Websites For Hire. All rights reserved.</p>
-                <nav class="footer-nav">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="second-page.html">Introduction</a></li>
-                        <li><a href="form-page.html">Form</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="responsive-design.html">Responsive</a></li>
-                        <li><a href="modern-css.html">Modern CSS</a></li>
-                        <li><a href="interactive-js.html">Interactive JS</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </footer>
 
     <script src="JS/script.js"></script>
 </body>
