--- a/responsive-design.html
+++ b/responsive-design.html
@@ -3,75 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional web development services offering modern, responsive, and interactive website solutions for hire this is the responsive-design page it explains how my websites can fit in your mobile phone or any other device.">    
-    <title>Responsive Design - Websites For Hire</title>
+    <title>Responsive | Websites For Hire</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" type="image/svg+xml" href="IMG/logo.svg">
 </head>
 <body>
-    <header>
-    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
-        <div class="logo-group" style="display: flex; align-items: center; gap: 10px;">
-            <img src="IMG/logo.svg" alt="Websites For Hire Spider Logo" style="width: 40px; height: 40px;">
-            <h1 style="margin: 0;">Websites For Hire</h1>
-        </div>
-        <nav>
-            <ul style="display: flex; list-style: none; gap: 15px; margin: 0; padding: 0;">
+    <div class="header-main-container">
+        <nav class="nav-container">
+            <h1 class="brand-name">Websites For Hire</h1>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="second-page.html">Introduction</a></li>
-                <li><a href="form-page.html">Form</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="responsive-design.html" class="active">Responsive</a></li>
+                <li><a href="form-page.html">Form</a></li>
+                <li><a href="responsive-design.html">Responsive Design</a></li>
                 <li><a href="modern-css.html">Modern CSS</a></li>
                 <li><a href="interactive-js.html">Interactive JS</a></li>
             </ul>
+            <button id="theme-toggle">🌙</button>
         </nav>
-        <button id="theme-toggle" aria-label="Toggle Dark Mode">🌙</button>
     </div>
-</header>
-    <main class="container content-page">
-        <h2>Responsive Design</h2>
-        <p>Responsive Web Design (RWD) is an approach to web design aimed at crafting sites to provide an optimal viewing and interaction experience—easy reading and navigation with a minimum of resizing, panning, and scrolling—across a wide range of devices (from mobile phones to desktop computer monitors).</p>
 
-        <section class="core-principles">
-            <h3>Three Core Principles</h3>
-            <div class="feature-grid">
-                <div class="feature-item">
-                    <h4>Fluid Grids</h4>
-                    <p>Instead of fixed pixel widths, we use relative units like percentages (or modern CSS units like `vw` or `fr`) to define layout size, allowing elements to stretch and shrink based on the viewport.</p>
-                </div>
-                <div class="feature-item">
-                    <h4>Flexible Images</h4>
-                    <p>Images are constrained using CSS properties like `max-width: 100%` so they never overflow their container, preventing horizontal scrolling on smaller devices.</p>
-                </div>
-                <div class="feature-item">
-                    <h4>Media Queries</h4>
-                    <p>Media queries allow us to apply specific styles (like changing a layout from 3 columns to 1 column) based on device characteristics, most commonly the screen width.</p>
-                </div>
-            </div>
+    <main class="container">
+        <section class="hero-card reveal">
+            <h2>Truly Responsive</h2>
+            <p>Whether you are on a Pixel 7, a tablet, or a 4K desktop, this layout adjusts automatically using Flexbox and Media Queries.</p>
         </section>
-        <p>Our commitment to RWD ensures your website looks great and performs perfectly for every visitor, regardless of how they access it. </p>
-         <a href="modern-css.html" class="cta-button">Next: Modern CSS</a> 
     </main>
-
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <p class="copyright">&copy; 2026 Websites For Hire. All rights reserved.</p>
-                <nav class="footer-nav">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="second-page.html">Introduction</a></li>
-                        <li><a href="form-page.html">Form</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="responsive-design.html">Responsive</a></li>
-                        <li><a href="modern-css.html">Modern CSS</a></li>
-                        <li><a href="interactive-js.html">Interactive JS</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </footer>
 
     <script src="JS/script.js"></script>
 </body>
