--- a/modern-css.html
+++ b/modern-css.html
@@ -3,75 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional web development services offering modern, responsive, and interactive website solutions for hire this is the modern-css page.">    
-    <title>Modern CSS - Websites For Hire</title>
+    <title>Modern CSS | Websites For Hire</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" type="image/svg+xml" href="IMG/logo.svg">
 </head>
 <body>
-    <header>
-    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
-        <div class="logo-group" style="display: flex; align-items: center; gap: 10px;">
-            <img src="IMG/logo.svg" alt="Websites For Hire Spider Logo" style="width: 40px; height: 40px;">
-            <h1 style="margin: 0;">Websites For Hire</h1>
-        </div>
-        <nav>
-            <ul style="display: flex; list-style: none; gap: 15px; margin: 0; padding: 0;">
+    <div class="header-main-container">
+        <nav class="nav-container">
+            <h1 class="brand-name">Websites For Hire</h1>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="second-page.html">Introduction</a></li>
-                <li><a href="form-page.html">Form</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="responsive-design.html">Responsive</a></li>
-                <li><a href="modern-css.html" class="active">Modern CSS</a></li>
+                <li><a href="form-page.html">Form</a></li>
+                <li><a href="responsive-design.html">Responsive Design</a></li>
+                <li><a href="modern-css.html">Modern CSS</a></li>
                 <li><a href="interactive-js.html">Interactive JS</a></li>
             </ul>
+            <button id="theme-toggle">🌙</button>
         </nav>
-        <button id="theme-toggle" aria-label="Toggle Dark Mode">🌙</button>
     </div>
-</header>
-    <main class="container content-page">
-        <h2>Modern CSS Techniques</h2>
-        <p>We leverage the latest and most efficient CSS features to build robust, maintainable, and highly performant style sheets. This moves beyond traditional float-based layouts to achieve complex designs with minimal code.</p>
 
-        <section class="core-concepts">
-            <h3>Key Modern Concepts</h3>
-            <div class="feature-grid">
-                <div class="feature-item">
-                    <h4>CSS Grid</h4>
-                    <p>Used for two-dimensional, page-level layouts. It allows us to manage rows and columns simultaneously, creating complex, asymmetrical designs easily (like the main `feature-grid` on the homepage).</p>
-                </div>
-                <div class="feature-item">
-                    <h4>Flexbox</h4>
-                    <p>Used for one-dimensional layouts, typically arranging items within a component (like the navigation links in the header). It excels at alignment and spacing of content within a single row or column.</p>
-                </div>
-                <div class="feature-item">
-                    <h4>Custom Properties (Variables)</h4>
-                    <p>We use CSS variables (like `--primary-color` and `--background-color`) to store reusable values. This is crucial for rapid theming, such as implementing the Dark Mode toggle you see on this site.</p>
-                </div>
-            </div>
+    <main class="container">
+        <section class="hero-card reveal">
+            <h2>CSS Variables & Grid</h2>
+            <p>Using <code>:root</code> variables and CSS Grid, we've created a site that is incredibly easy to maintain and update.</p>
         </section>
-        <p>Using these methods ensures styles are scalable and easy to modify, significantly speeding up development time. </p>
-        <a href="interactive-js.html" class="cta-button">Next: Interactive JS</a>
     </main>
-
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <p class="copyright">&copy; 2026 Websites For Hire. All rights reserved.</p>
-                <nav class="footer-nav">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="second-page.html">Introduction</a></li>
-                        <li><a href="form-page.html">Form</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="responsive-design.html">Responsive</a></li>
-                        <li><a href="modern-css.html">Modern CSS</a></li>
-                        <li><a href="interactive-js.html">Interactive JS</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </footer>
 
     <script src="JS/script.js"></script>
 </body>
