--- a/about.html
+++ b/about.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Websites For Hire</title>
+    <link rel="icon" type="image/png" href="IMG/spider-web.png">
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="header-main-container">
         <nav class="nav-container">
-            <h1 class="brand-name">Websites For Hire</h1>
+            <div class="brand-wrapper">
+                <img src="IMG/spider-web.png" alt="Logo" class="logo-icon">
+                <h1 class="brand-name">Websites For Hire</h1>
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="second-page.html">Introduction</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="form-page.html">Form</a></li>
-                <li><a href="responsive-design.html">Responsive Design</a></li>
+                <li><a href="responsive-design.html">Responsive</a></li>
                 <li><a href="modern-css.html">Modern CSS</a></li>
                 <li><a href="interactive-js.html">Interactive JS</a></li>
             </ul>
@@ -26,41 +30,15 @@
     <main class="container">
         <section class="hero-card reveal">
             <h2>Our Mission</h2>
-            <p>Websites For Hire was founded to provide professional, accessible, and high-speed web solutions for businesses of all sizes.</p>
+            <p>To provide high-quality, professional, and accessible web development services to businesses across the globe.</p>
         </section>
     </main>
+
     <footer>
-        <div class="footer-container">
-            <div class="footer-column">
-                <h4>Websites For Hire</h4>
-                <p>Building high-performance, responsive websites for the modern era.</p>
-            </div>
-
-            <div class="footer-column">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="responsive-design.html">Responsive Design</a></li>
-                    <li><a href="form-page.html">Contact</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-column">
-                <h4>Contact</h4>
-                <ul>
-                    <li>Email: info@websitesforhire.com</li>
-                    <li>Texas, USA</li>
-                    <li>Available for Hire: 2026</li>
-                </ul>
-            </div>
-        </div>
-
         <div class="footer-bottom">
             <p>&copy; 2026 Websites For Hire. All Rights Reserved.</p>
         </div>
     </footer>
-    
     <script src="JS/script.js"></script>
 </body>
 </html>
