--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Websites For Hire</title>
-    <link rel="icon" type="image/png" href="IMG/spider-web.png">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" type="image/svg+xml" href="IMG/logo.svg">    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="header-main-container">
