--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Websites For Hire</title>
-    <link rel="icon" type="image/png" href="IMG/spider-web.png">
+    <link rel="icon" type="image/svg+xml" href="IMG/logo.svg">
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="header-main-container">
         <nav class="nav-container">
             <div class="brand-wrapper">
-                <img src="IMG/spider-web.png" alt="Logo" class="logo-icon">
-                <h1 class="brand-name">Websites For Hire</h1>
-            </div>
+    <img src="IMG/logo.svg" alt="Websites For Hire Logo" class="logo-icon">
+    <h1 class="brand-name">Websites For Hire</h1>
+           </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="second-page.html">Introduction</a></li>
